[gd_scene load_steps=33 format=3 uid="uid://bobnrvdvn6sww"]

[ext_resource type="Script" uid="uid://c6qcmo5bab2nc" path="res://roulette.gd" id="1_ibne2"]
[ext_resource type="Texture2D" uid="uid://b3meyi3frgrfk" path="res://asset/Artboard 1.png" id="2_70hxm"]
[ext_resource type="Texture2D" uid="uid://7tbenk1b1f63" path="res://asset/16x32 Idle-Sheet.png" id="2_qna4d"]
[ext_resource type="Texture2D" uid="uid://dm1f0ha73lm18" path="res://asset/spinnyboi(1).png" id="3_70hxm"]
[ext_resource type="Texture2D" uid="uid://bysuixucc2ecn" path="res://asset/16x32 Walk Cycle-Sheet.png" id="3_81wp0"]
[ext_resource type="FontFile" uid="uid://bm2cbjcwrxo37" path="res://fonts/VT323-Regular.ttf" id="4_81wp0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_upjqo"]
atlas = ExtResource("2_qna4d")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j55sx"]
atlas = ExtResource("2_qna4d")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7afb"]
atlas = ExtResource("2_qna4d")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p0sk"]
atlas = ExtResource("2_qna4d")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k4u2"]
atlas = ExtResource("2_qna4d")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14od4"]
atlas = ExtResource("2_qna4d")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs0au"]
atlas = ExtResource("2_qna4d")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re0xm"]
atlas = ExtResource("2_qna4d")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpg6w"]
atlas = ExtResource("2_qna4d")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3xg0"]
atlas = ExtResource("2_qna4d")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_maiwu"]
atlas = ExtResource("2_qna4d")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq20t"]
atlas = ExtResource("2_qna4d")
region = Rect2(48, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3el0"]
atlas = ExtResource("3_81wp0")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pawsp"]
atlas = ExtResource("3_81wp0")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcfiw"]
atlas = ExtResource("3_81wp0")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo74n"]
atlas = ExtResource("3_81wp0")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b0cp"]
atlas = ExtResource("3_81wp0")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u04ji"]
atlas = ExtResource("3_81wp0")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p72k"]
atlas = ExtResource("3_81wp0")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkc8c"]
atlas = ExtResource("3_81wp0")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l7dg"]
atlas = ExtResource("3_81wp0")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u47ej"]
atlas = ExtResource("3_81wp0")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37efn"]
atlas = ExtResource("3_81wp0")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4iuv"]
atlas = ExtResource("3_81wp0")
region = Rect2(48, 128, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibne2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_upjqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j55sx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7afb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p0sk")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k4u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14od4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs0au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re0xm")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpg6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3xg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maiwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq20t")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3el0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pawsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcfiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo74n")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b0cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u04ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p72k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkc8c")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l7dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u47ej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37efn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4iuv")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_70hxm"]

[node name="Roulette" type="Node2D"]
script = ExtResource("1_ibne2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1160.0
offset_bottom = 654.0
color = Color(0.24351323, 0.3702442, 0.116945334, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(715, 222.00005)
scale = Vector2(3.1874998, 3.1874998)
texture = ExtResource("2_70hxm")

[node name="spinnyboi" type="Sprite2D" parent="."]
position = Vector2(454, 245)
scale = Vector2(0.42675164, 0.4267516)
texture = ExtResource("3_70hxm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(168, 397)
scale = Vector2(20, 20)
sprite_frames = SubResource("SpriteFrames_ibne2")
animation = &"down"
autoplay = "down"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 407.0
offset_top = 466.0
offset_right = 807.0
offset_bottom = 594.0
theme_override_fonts/normal_font = ExtResource("4_81wp0")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Press spin to spin"

[node name="1to12" type="Button" parent="CanvasLayer"]
offset_left = 651.0
offset_top = 316.0
offset_right = 788.0
offset_bottom = 363.0
text = "1 to 12"

[node name="13to24" type="Button" parent="CanvasLayer"]
offset_left = 788.0
offset_top = 316.0
offset_right = 925.0
offset_bottom = 363.0
text = "13 to 24"

[node name="25to36" type="Button" parent="CanvasLayer"]
offset_left = 925.0
offset_top = 316.0
offset_right = 1062.0
offset_bottom = 363.0
text = "25 to 36"

[node name="1to18" type="Button" parent="CanvasLayer"]
offset_left = 651.0
offset_top = 131.0
offset_right = 720.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "1 to 18"

[node name="00" type="Button" parent="CanvasLayer"]
offset_left = 620.0
offset_top = 177.0
offset_right = 651.0
offset_bottom = 246.0
theme_override_font_sizes/font_size = 12
text = "00"
autowrap_mode = 2

[node name="0" type="Button" parent="CanvasLayer"]
offset_left = 620.0
offset_top = 247.0
offset_right = 651.0
offset_bottom = 316.0
theme_override_font_sizes/font_size = 12
text = "0"
autowrap_mode = 2

[node name="1" type="Button" parent="CanvasLayer"]
offset_left = 652.0
offset_top = 270.0
offset_right = 685.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "1"
autowrap_mode = 2

[node name="2" type="Button" parent="CanvasLayer"]
offset_left = 652.0
offset_top = 224.0
offset_right = 685.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "2"
autowrap_mode = 2

[node name="3" type="Button" parent="CanvasLayer"]
offset_left = 652.0
offset_top = 178.0
offset_right = 685.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "3"
autowrap_mode = 2

[node name="4" type="Button" parent="CanvasLayer"]
offset_left = 686.0
offset_top = 270.0
offset_right = 719.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "4"
autowrap_mode = 2

[node name="5" type="Button" parent="CanvasLayer"]
offset_left = 686.0
offset_top = 224.0
offset_right = 719.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "5"
autowrap_mode = 2

[node name="6" type="Button" parent="CanvasLayer"]
offset_left = 686.0
offset_top = 178.0
offset_right = 719.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "6"
autowrap_mode = 2

[node name="7" type="Button" parent="CanvasLayer"]
offset_left = 720.0
offset_top = 270.0
offset_right = 753.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "7"
autowrap_mode = 2

[node name="8" type="Button" parent="CanvasLayer"]
offset_left = 720.0
offset_top = 224.0
offset_right = 753.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "8"
autowrap_mode = 2

[node name="9" type="Button" parent="CanvasLayer"]
offset_left = 720.0
offset_top = 178.0
offset_right = 753.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "9"
autowrap_mode = 2

[node name="10" type="Button" parent="CanvasLayer"]
offset_left = 755.0
offset_top = 270.0
offset_right = 788.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "10"
autowrap_mode = 2

[node name="11" type="Button" parent="CanvasLayer"]
offset_left = 755.0
offset_top = 224.0
offset_right = 788.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "11"
autowrap_mode = 2

[node name="12" type="Button" parent="CanvasLayer"]
offset_left = 755.0
offset_top = 178.0
offset_right = 788.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "12"
autowrap_mode = 2

[node name="13" type="Button" parent="CanvasLayer"]
offset_left = 789.0
offset_top = 270.0
offset_right = 822.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "13"
autowrap_mode = 2

[node name="14" type="Button" parent="CanvasLayer"]
offset_left = 789.0
offset_top = 224.0
offset_right = 822.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "14"
autowrap_mode = 2

[node name="15" type="Button" parent="CanvasLayer"]
offset_left = 789.0
offset_top = 178.0
offset_right = 822.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "15"
autowrap_mode = 2

[node name="16" type="Button" parent="CanvasLayer"]
offset_left = 823.0
offset_top = 270.0
offset_right = 856.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "16"
autowrap_mode = 2

[node name="17" type="Button" parent="CanvasLayer"]
offset_left = 823.0
offset_top = 224.0
offset_right = 856.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "17"
autowrap_mode = 2

[node name="18" type="Button" parent="CanvasLayer"]
offset_left = 823.0
offset_top = 178.0
offset_right = 856.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "18"
autowrap_mode = 2

[node name="19" type="Button" parent="CanvasLayer"]
offset_left = 858.0
offset_top = 270.0
offset_right = 891.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "19"
autowrap_mode = 2

[node name="20" type="Button" parent="CanvasLayer"]
offset_left = 858.0
offset_top = 224.0
offset_right = 891.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "20"
autowrap_mode = 2

[node name="21" type="Button" parent="CanvasLayer"]
offset_left = 858.0
offset_top = 178.0
offset_right = 891.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "21"
autowrap_mode = 2

[node name="22" type="Button" parent="CanvasLayer"]
offset_left = 892.0
offset_top = 270.0
offset_right = 925.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "22"
autowrap_mode = 2

[node name="23" type="Button" parent="CanvasLayer"]
offset_left = 892.0
offset_top = 224.0
offset_right = 925.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "23"
autowrap_mode = 2

[node name="24" type="Button" parent="CanvasLayer"]
offset_left = 892.0
offset_top = 178.0
offset_right = 925.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "24"
autowrap_mode = 2

[node name="25" type="Button" parent="CanvasLayer"]
offset_left = 926.0
offset_top = 270.0
offset_right = 959.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "25"
autowrap_mode = 2

[node name="26" type="Button" parent="CanvasLayer"]
offset_left = 926.0
offset_top = 224.0
offset_right = 959.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "26"
autowrap_mode = 2

[node name="27" type="Button" parent="CanvasLayer"]
offset_left = 926.0
offset_top = 178.0
offset_right = 959.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "27"
autowrap_mode = 2

[node name="28" type="Button" parent="CanvasLayer"]
offset_left = 960.0
offset_top = 270.0
offset_right = 993.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "28"
autowrap_mode = 2

[node name="29" type="Button" parent="CanvasLayer"]
offset_left = 960.0
offset_top = 224.0
offset_right = 993.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "29"
autowrap_mode = 2

[node name="30" type="Button" parent="CanvasLayer"]
offset_left = 960.0
offset_top = 178.0
offset_right = 993.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "30"
autowrap_mode = 2

[node name="31" type="Button" parent="CanvasLayer"]
offset_left = 995.0
offset_top = 270.0
offset_right = 1028.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "31"
autowrap_mode = 2

[node name="32" type="Button" parent="CanvasLayer"]
offset_left = 995.0
offset_top = 224.0
offset_right = 1028.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "32"
autowrap_mode = 2

[node name="33" type="Button" parent="CanvasLayer"]
offset_left = 995.0
offset_top = 178.0
offset_right = 1028.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "33"
autowrap_mode = 2

[node name="34" type="Button" parent="CanvasLayer"]
offset_left = 1029.0
offset_top = 270.0
offset_right = 1062.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 12
text = "34"
autowrap_mode = 2

[node name="35" type="Button" parent="CanvasLayer"]
offset_left = 1029.0
offset_top = 224.0
offset_right = 1062.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 12
text = "35"
autowrap_mode = 2

[node name="36" type="Button" parent="CanvasLayer"]
offset_left = 1029.0
offset_top = 178.0
offset_right = 1062.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 12
text = "36"
autowrap_mode = 2

[node name="even" type="Button" parent="CanvasLayer"]
offset_left = 720.0
offset_top = 131.0
offset_right = 788.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "EVEN"

[node name="red" type="Button" parent="CanvasLayer"]
offset_left = 788.0
offset_top = 131.0
offset_right = 856.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "RED"

[node name="black" type="Button" parent="CanvasLayer"]
offset_left = 857.0
offset_top = 131.0
offset_right = 925.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "BLACK"

[node name="odd" type="Button" parent="CanvasLayer"]
offset_left = 926.0
offset_top = 131.0
offset_right = 994.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "ODD"

[node name="19to36" type="Button" parent="CanvasLayer"]
offset_left = 994.0
offset_top = 131.0
offset_right = 1062.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 12
text = "19 to 36"

[node name="spin" type="Button" parent="CanvasLayer"]
offset_left = 944.0
offset_top = 462.0
offset_right = 1072.0
offset_bottom = 526.0
theme_override_font_sizes/font_size = 32
text = "Spin!"

[node name="exit" type="Button" parent="CanvasLayer"]
offset_left = 944.0
offset_top = 543.0
offset_right = 1072.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="Label" type="Label" parent="."]
offset_left = 425.0
offset_top = 208.0
offset_right = 465.0
offset_bottom = 275.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48

[node name="Label2" type="Label" parent="."]
offset_left = 407.0
offset_top = 562.0
offset_right = 581.0
offset_bottom = 607.0
theme_override_font_sizes/font_size = 28
text = "Coins: 1000"

[node name="WheelSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamGenerator_70hxm")

[node name="Label3" type="Label" parent="."]
offset_left = 411.0
offset_top = 521.0
offset_right = 451.0
offset_bottom = 544.0
